--- a/resources/assets/less/core/framework.less
+++ b/resources/assets/less/core/framework.less
@@ -49,6 +49,11 @@ body {
 .page-content {
     margin-left: -@gutterWidth/2;
     margin-right: -@gutterWidth/2;
+
+    @media @bp-DesktopXL {
+        margin-left: @gutterWidth/2;
+        margin-right: @gutterWidth/2;
+    }
 }
 
 .page-middle,
