--- a/resources/assets/less/project/variables.less
+++ b/resources/assets/less/project/variables.less
@@ -185,6 +185,7 @@
 @navBg:                     @darkGreen; // The background color of the responsive navigation
 
 /* Breakpoints */
+@bp-DesktopXL:              ~"screen and (max-width: 1380px)";
 @bp-Desktop:                ~"screen and (min-width: 1024px)";
 @bp-Large:                	~"screen and (max-width: 1250px)";
 @bp-TabletL:                ~"screen and (max-width: 1023px)";
