--- a/public/css/site.css
+++ b/public/css/site.css
@@ -636,6 +636,12 @@ body#js-loggedin {
   margin-left: -1.2rem;
   margin-right: -1.2rem;
 }
+@media screen and (max-width: 1380px) {
+  .page-content {
+    margin-left: 1.2rem;
+    margin-right: 1.2rem;
+  }
+}
 .page-middle,
 .page-left,
 .page-right {
@@ -2780,6 +2786,7 @@ html .cookie-explanation button.request-cookies:before,
   -webkit-transition: 0.15s ease-out;
   transition: 0.15s ease-out;
   height: 9rem;
+  width: auto;
 }
 @media screen and (max-width: 1250px) {
   .page-header .inner {
@@ -2815,11 +2822,17 @@ html .cookie-explanation button.request-cookies:before,
 .page-logo {
   height: 9rem;
   padding: 2.4rem 0;
+  margin: 0;
 }
 @media screen and (max-width: 640px) {
   .page-logo {
     height: 4.8rem;
     padding: 0;
+  }
+}
+@media (max-width: 1023px) {
+  .page-logo {
+    height: 4.8rem;
   }
 }
 .page-logo a {
