--- a/resources/assets/less/project/navmain.less
+++ b/resources/assets/less/project/navmain.less
@@ -34,6 +34,7 @@
             text-transform: uppercase;
             font-size: @smallestHeadingSize;
             cursor: pointer;
+            box-sizing: border-box;
 
             &:before{
                 .center;
